--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^5.9.0
   flutter:
     sdk: flutter
+  flutter_getit: ^2.0.0
   loading_animation_widget: ^1.3.0
   shared_preferences: ^2.5.3
   signals_flutter: ^6.0.2
